# crnn_pom

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: ci.yaml
.github/workflows/: ci.yaml
crnn_pom/: _version.py  parser.py  train.py  utils.py
crnn_pom/dataset/: __init__.py  lmdb_dataset.py
crnn_pom/dataset/imgaug/: __init__.py  base.py  converter.py  crnn_aug.py  normalize.py  pad.py  resize.py
crnn_pom/model/: __init__.py  conv.py  crnn.py  recipe.py  sequential.py
tests/dataset/: test_resize.py
tests/model/: test_conv.py
